--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Template</title>
-    <link rel="stylesheet" href="index.css">
   </head>
-  <body>
+  <body id="theBody">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
